--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prettier:fix": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,scss,md,json}\"",
     "prepare": "husky || true"
   },
   "dependencies": {
@@ -27,8 +28,16 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-sh": "^0.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "./**/*": [
+      "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,scss,md,json}\""
+    ]
   }
 }
