--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "prepare": "husky || true"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@vis.gl/react-google-maps": "^1.5.1",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "next": "15.1.6",
