chore: add bootstrap-icons package and import in layout

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroicons/react": "^2.2.0",
     "@vis.gl/react-google-maps": "^1.5.1",
     "axios": "^1.7.9",
+    "bootstrap-icons": "^1.11.3",
     "classnames": "^2.5.1",
     "next": "15.1.6",
     "react": "^19.0.0",
