--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,3 @@
 {
-  "./**/*": ["prettier --write \"**/*.{js,jsx,mjs,ts,tsx,css,scss,md,json}\""]
+  "**/*.{js,jsx,mjs,ts,tsx,css,scss,md,json}": ["prettier --write"]
 }
